# gi-notifier

./: pyproject.toml
gi_notifier/: config.py  file.py  main.py  runner.py  util.py
gi_notifier/data/book/: admonition.py  ballad.py  conflict.py  contention.py  diligence.py  elegance.py  equity.py  freedom.py  gold.py  ingenuity.py  justice.py  kindling.py  light.py  order.py  praxis.py  prosperity.py  resistance.py  transience.py
gi_notifier/data/char/: __init__.py  albedo.py  alhaitham.py  aloy.py  amber.py  arataki_itto.py  arlecchino.py  baizhu.py  barbara.py  beidou.py  bennett.py  candace.py  charlotte.py  chasca.py  chevreuse.py  chiori.py  chongyun.py  citlali.py  clorinde.py  collei.py  cyno.py  dehya.py  diluc.py  diona.py  dori.py  emilie.py  escoffier.py  eula.py  faruzan.py  fischl.py  freminet.py  furina.py  gaming.py  ganyu.py  gorou.py  hu_tao.py  iansan.py  ifa.py  jean.py  kachina.py  (+60 more)
gi_notifier/handler/: chat_handler.py  command_handler.py
gi_notifier/models/: base.py  models.py
gi_notifier/scheduler/: __init__.py
gi_notifier/temp/: __init__.py
